# uw-calibration-pinax

defraction_map_finder/src/: MapFinder.cpp  stereo_defraction_map_finder.cpp
input_data/: calibration_params.txt
jir_image_remapper _stereo/launch/: image_remapper_stereo.launch
jir_image_remapper/launch/: image_remapper.launch
jir_image_remapper_stereo/: CMakeLists.txt  package.xml
jir_image_remapper_stereo/launch/: image_remapper_stereo.launch
jir_image_remapper_stereo/src/: node.cpp
jir_refractive_image_geometry/: package.xml
output_data/calibration_files/: camera_left.yaml  camera_right.yaml  extrinsics.yaml
src/: run_pinax.sh
uw-calibration-pinax/: CMakeLists.txt  package.xml
