<?xml version="1.0"?>
<package format="2">
  <name>uw-calibration-pinax</name>
  <version>0.6.13</version>
  <description> Description... </description>

  <author email="nestor.neto@fieb.org.br">Nestor D. Pereira Neto</author> 
  <maintainer email="nestor.neto@fieb.org.br">Nestor D. Pereira Neto</maintainer> 

  <license>Apache</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>defraction_map_finder</exec_depend>
  <exec_depend>jir_image_remapper</exec_depend>
  <exec_depend>jir_rectification_remap_lib</exec_depend>
  <exec_depend>jir_refractive_image_geometry</exec_depend>
  <exec_depend>jir_refractive_image_geometry_msgs</exec_depend>

  <export>
    <metapackage/>
  </export>
</package>
